# skills-evolution

./: CHANGELOG.md  README.md  action.yml  pyproject.toml
.github/workflows/: _test-reusable.yml  oss-skill-health.yml  oss_skill_health.yml  skill-trace-capture.yml  skills-health.yml  skills-trace-capture.yml  skills_health.yml  test.yml
src/skills_evolution/: ai_updater.py  cli.py  core.py  health.py  mcp_server.py  semantic.py
tests/: test_ai_updater.py  test_core.py  test_health.py
workflows/: oss-skill-pr-check.md  oss-skill-update.md
